MB-35862 - Partial fix, avoid double scrollbars in query editor
This problem was very hard to reproduce, but since the Ace editor
provides its own scrollbars, make sure that the enclosing DIV doesn't
try to add additional scrollbars.

Reviewed-on: http://review.couchbase.org/c/ns_server/+/144553
Tested-by: Eben Haber <eben@couchbase.com>

--- a/priv/public/ui/app/css/cbui-components.css
+++ b/priv/public/ui/app/css/cbui-components.css
@@ -2149,7 +2149,7 @@ button:hover.scenarios-delete {
   position: relative;
 }
 .wb-ace-editor {
-  overflow: auto;
+  overflow: none;
   background-color: #f6f7f9 !important;
   padding: 1.5rem !important;
 }
